--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(common.css)
+
 
 /*基本レイアウト*/
 body{
@@ -16,8 +16,17 @@ header h1{
   margin: 0 0 26px 0;
   padding-top: 28px;
   text-align: center;
+  float:left;
 }
 
+h2{
+  background-image: url();
+}
+
+
+nav{
+  clear: both;
+}
 
 /*パンくずリスト*/
 
