--- a/css/style.css
+++ b/css/style.css
@@ -33,28 +33,40 @@ nav{
 
 
 /*TOP*/
+header h1{
+  /*height: 0;*/
+  padding: 0 0 0 50px;
+  /*margin: 0 0 40px;*/
+}
+
 header .top_contact{
-  padding: 100px;
-  height:100px;
-  background-image: url(../images/banner.png);
-  background-repeat: no-repeat;
+  /*padding: 100px;*/
+  height:200px;
   width: 500px;
+  background-image: url(../images/banner_tel.png);
+  background-repeat: no-repeat;
   float: right;
   background-size:contain;
-  margin:20px 0px 0px 50px;
-  padding:30px 30px 30px 30px ;
+}
+
+.top_contact ul li{
+  float: left;
+}
+.top_contact ul li a{
+  margin:0 0 0 20px;
+  padding:0 0 0 50px;
+}
+#bannertel a{
+  /*padding: 0px;*/
+  /*float: left;*/
+}
+
+#bannertel2 a{
+  /*padding: 0px;*/
+  /*float: right;*/
 }
 
 
-header .top_contact p{
-padding:0 0 0 360px;
-width: 200px;
-}
-
-header .top_contact li a{
-padding:0 0 0 360px;
-width: 200px;
-}
 
 
 
