--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header h1{
   padding-top: 28px;
   text-align: center;
   float:left;
+
 }
 
 header,li{
@@ -57,13 +58,15 @@ header .top_contact{
   padding:0 0 0 50px;
 }
 #bannertel a{
-  /*padding: 0px;*/
-  /*float: left;*/
+  padding: 0 0 0 0;
+  margin: 70px 0 50px 250px;
+  float: left;
 }
 
 #bannertel2 a{
-  /*padding: 0px;*/
-  /*float: right;*/
+  padding: 0 0 0 0;
+  margin: 70px 0 50px 40px;
+  float: right;
 }
 
 
